grammar.js
    source_file: ($) =>
      // A `use` may sit anywhere among the items, which is what the compiler's parser accepts
      // and is worth keeping: `use Colour::*;` written directly under the enum it globs reads
      // better than the same line hoisted to the top away from what it refers to. A package
      // is one scope regardless of order, so nothing depends on where it went.
      seq(
        optional($.package_declaration),
        repeat(choice($.use_declaration, $._item)),
      ),

    // One token for both kinds. `/// what it does` is a *doc* comment — the compiler's item
    // lowering attaches it to the declaration below — and this grammar deliberately does not
    // split it out: a separate token would have to beat `//.*` in the lexer, and lexical
    // precedence in tree-sitter overrides longest match, which makes `//// a rule` a doc
    // comment followed by wreckage. The distinction is one character of prefix and belongs in
    // a query predicate, where it costs nothing to be exact.
    _item: ($) =>
      choice(
        $.attribute,
        $.function_item,
        $.struct_item,
        $.enum_item,
        $.trait_item,
        $.impl_item,
        $.elements_item,
        $.test_item,
        $.const_item,
        $.type_alias_item,
      ),

    // `test "adds two numbers" { 1 + 1 == 2 }` — the label is prose, so it is a string rather
    // than an identifier: it is read in a report, not called from anywhere.
    _modifiers: ($) => repeat1($._modifier),

    // `view` marks a function as emitting elements; `pure` marks it as reaching no ambient
    // authority. The compiler scans the run of modifiers and dispatches on what it ends at, so
    // any order of any subset parses and a repeat is a *diagnostic* rather than a parse error —
    // this mirrors that, rather than enumerating the orders.
    // A statement ends with its line, so a body-less declaration needs no `;` — and a `view`
    // may drop the `fn`: `view Card(title: Str) { .. }`. The keyword is optional after *any*
    // run of modifiers rather than only after `view`, because a run is one rule here; which
    // modifiers permit the omission is the compiler's business, and every item but a function
    // begins with its own keyword, so nothing else can follow a modifier and a name.
    function_item: ($) =>
      seq(
        optional($._modifiers),
        optional("fn"),
        // Either case. Identifier case is semantic here, so a name is ordinarily lowercase —
        // but a `view` may be capitalised, because a component is a thing rather than an action
        // and because `<Card/>` will need the capital to tell a component from a tag. The
        // compiler allows it only after `view`; accepting it here for any `fn` keeps this LR(1)
        // and leaves the restriction where the message is.
        field("name", choice($.identifier, $.type_identifier)),
        // Declared in angles only: a function names its variables by using them, and a paren
        // list after its name is its parameters.
        optional(field("type_parameters", alias($._angle_type_parameters, $.type_parameters))),
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $._type))),
        optional(field("where", $.where_clause)),
        // A body, or none. The second is what an `@intrinsic` declaration is: the runtime
        // supplies the body and the declaration supplies only the type.
        //
        // Accepted for *any* function, exactly as the compiler's parser accepts it, and for the
        // same reason — which declarations may go without a body is a question about the
        // attribute, and an attribute is the item's *sibling* rather than part of it. So neither
        // parser can tell from here, and the rule is stated where the answer is known.
        optional(field("body", choice($.block, ";"))),
      ),

    parameter_list: ($) =>
      seq("(", commaSep(choice($.self_parameter, $.parameter)), optional(","), ")"),

    // A bare `self`, which needs no annotation because the impl block says what it is.
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("default", $._expression))),
      ),

    _angle_type_parameters: ($) => seq("<", commaSep1($.type_parameter), optional(","), ">"),

    type_arguments: ($) =>
      choice(
        seq("<", commaSep1($._type), optional(","), ">"),
        seq("(", commaSep1($._type), optional(","), ")"),
      ),

    // --- types -------------------------------------------------------------------------

    _type: ($) => choice($.union_type, $._type_term),

    // `"get" | "post"`, `1 | 2 | 3` — a union of literal types.
    //
    // Members are literals of one base type, and that is a *checking* rule rather than a grammar
    // one: `Int | Str` parses here and is refused with a message pointing at `enum`, because
    // whether a member is a literal is a question about what a name resolved to.
    //
    // A `function_type`'s return is a `_type_term`, so `fn() -> A | B` reads as two members of one
    // union rather than as a function returning a union. Neither is more useful than the other — a
    // union member has to be a literal, so a function type can never be one.
    named_type: ($) =>
      seq(
        // Repeated, because a package path can be more than one segment deep:
        // `io::Conn`, `super::text::Slug`. `self` and `super` need no rule of their own
        // — `identifier` already matches them, and what makes one a root is where it sits.
        repeat(seq(field("qualifier", $._path_segment), "::")),
        field("name", choice($.type_identifier, $.identifier)),
        optional(field("type_arguments", $.type_arguments)),
      ),

    // `(Request) -> Response` — bare; the `fn` spelling stays accepted until every file has moved.
    block: ($) => seq("{", repeat($._statement), optional(field("tail", $._expression)), "}"),

    // A statement ends with its line, and a `;` is written only between two on one line. The
    // compiler reads the newline; this grammar makes the `;` optional and lets the automaton
    // settle where one statement ends — which differs from the compiler in exactly the cases
    // the reference calls out, a `(` or a `-` opening the next line, and in those it still
    // produces a tree rather than an error.
    _statement: ($) =>
      choice($.let_statement, $.use_statement, $.expression_statement),

    let_statement: ($) =>
      choice(
        seq(
          "let",
          field("name", choice($.identifier, "_")),
          optional(seq(":", field("type", $._type))),
          "=",
          field("value", $._expression),
          optional($._terminator),
        ),
        // `let Some(x) = e else { .. }` — a refutable pattern, and the block that runs when it
        // does not match. The compiler requires that block to leave; the grammar only shapes it.
        seq(
          "let",
          field("pattern", choice($.tuple_struct_pattern, $.path_pattern, $.literal_pattern)),
          "=",
          field("value", $._expression),
          "else",
          field("else", $.block),
          optional($._terminator),
        ),
        // `let assert Some(x) = e` — the same pattern, and a panic where the `else` would be.
        seq(
          "let",
          "assert",
          field("pattern", $._pattern),
          "=",
          field("value", $._expression),
          optional($._terminator),
        ),
      ),

    // `use x <- f(a)` — the rest of the block becomes a closure, and the call takes it as its
    // last argument. Gleam's continuation, spelled with Gleam's arrow.
    expression_statement: ($) =>
      choice(seq($._expression, $._terminator), prec.dynamic(-1, $._expression)),

    // `;` between two statements on one line, or the line break the scanner reports — see
    // `externals`. Every other line break ends a statement by the automaton running out of
    // ways to continue it.
    _terminator: ($) => choice(";", $._soft_end),

    _expression: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string,
        $.char_literal,
        $.boolean_literal,
        $.identifier,
        // A nullary constructor used as a value — `Nil`, `Point`, `Red`. Uppercase, because
        // identifier case is what tells a constructor from a variable.
        $.type_identifier,
        $.path_expression,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.field_expression,
        $.try_expression,
        $.struct_literal,
        $.lambda_expression,
        $.element,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.for_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.block,
      ),

    // `List::Cons`, `Array::new`, and `text::Found::One` — a package, then a type, then a
    // variant. The compiler puts no bound on the number of segments, so neither does this.
    path_expression: ($) =>
      seq(
        field("qualifier", $._path_segment),
        repeat1(seq("::", field("name", $._path_segment))),
      ),

    // `self` and `super` are keywords and are path segments all the same: they are *roots*,
    // and a root is the first thing a path can be. `io::println(..)` and
    // `super::text::slug(..)` are writable wherever a name is, so the `use` grammar and the
    // expression grammar are one grammar — a `use` abbreviates a path rather than enabling it.
    _path_segment: ($) => choice($.type_identifier, $.identifier),

    binary_expression: ($) => {
      const table = [
        [PREC.pipe, "|>"],
        [PREC.or, "||"],
        [PREC.and, "&&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.bitand, "&"],
        [PREC.equality, choice("==", "!=")],
        [PREC.comparison, choice("<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec(PREC.postfix, seq(field("function", $._expression), field("arguments", $.argument_list))),

    // `(a, name: b, other:, ..base)` — positional, then by name, then a constructor's base.
    // The order is the compiler's rule; here any mix parses, and that is a diagnostic there.
    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($._expression, $.labelled_argument, $.struct_base)),
        optional(","),
        ")",
      ),

    // `name: value`, or `name:` for the local of that name.
    field_expression: ($) =>
      prec(PREC.postfix, seq(field("value", $._expression), ".", field("field", $.identifier))),

    // `e?` — propagate a `Result`'s error to the caller. Desugars to a `match`, and names
    // `Result::Ok` and `Result::Err` by name, so the compiler holds no table of lang items.
    // `try e` — prefix, binding like `-` and `!`, so it covers the postfix chain to its right.
    // Which calls inside the operand unwrap is decided by their types, in the checker.
    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expression),
          field("consequence", $.block),
          optional(seq("else", field("alternative", choice($.block, $.if_expression)))),
        ),
      ),

    // `match a, b { p, q => .. }` — several subjects without a tuple, one pattern each.
    match_expression: ($) =>
      seq("match", commaSep1(field("value", $._expression)), field("body", $.match_arm_list)),

    match_arm_list: ($) => seq("{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        commaSep1(field("pattern", $._pattern)),
        "=>",
        field("value", $._expression),
        optional(","),
      ),

    // `loop (i = 0, total = 0) { .. }` — the values that change between rounds are named,
    // because nothing else can change. The header *is* the block's parameter list.
    loop_expression: ($) =>
      seq("loop", optional(field("carried", $.loop_header)), field("body", $.block)),


    // `for (total = 0) x in xs.iter() { .. }`, and `for x in xs.iter() { .. }`. The header is
    // the same one `loop` takes — the two forms are one idea, and a `for` carrying nothing is
    // the one written for what its body does.
    for_expression: ($) =>
      seq(
        "for",
        optional(field("carried", $.loop_header)),
        field("element", $.identifier),
        "in",
        field("iterator", $._expression),
        field("body", $.block),
      ),

    loop_header: ($) => seq("(", commaSep($.loop_binding), optional(","), ")"),

    loop_binding: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    break_expression: ($) => prec.right(seq("break", optional($._expression))),

    continue_expression: ($) =>
      prec.right(
        seq("continue", optional(seq("(", commaSep($._expression), optional(","), ")"))),
      ),

    return_expression: ($) => prec.right(seq("return", optional($._expression))),

    // --- elements ----------------------------------------------------------------------

    // `</` and `/>` are single tokens rather than a `<` beside a `/`. Deciding whether a `<`
    // inside an element's content opens a nested one or closes this one otherwise needs two
    // tokens of lookahead, which an LR(1) parser does not have — the compiler peeks at
    // `nth(1)` for exactly this and can afford to.
    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.binding_pattern,
        $.literal_pattern,
        $.path_pattern,
        $.tuple_struct_pattern,
      ),

    wildcard_pattern: (_) => "_",

    binding_pattern: ($) => $.identifier,

    // A float pattern is rejected by the compiler — deciding exhaustiveness over doubles
    // means deciding equality on them, and `NaN` makes that a question with no good answer —
    // but it is accepted here on purpose. This grammar exists to highlight code, and a file
    // should not stop being highlightable because one line of it will not compile.
    // A string is one now, and only where the scrutinee is a *union*: `Str` has more values than
    // anyone will write down, so a set of string arms over one can never be complete. Which it is
    // is a question about types, so the grammar accepts both and the compiler decides. A float is
    // still accepted here and still refused there, for the `NaN` reason.
    literal_pattern: ($) =>
      choice($.integer_literal, $.float_literal, $.boolean_literal, $.string, $.char_literal),

    // `Nothing`, `Colour::Blue`, `text::Found::One`. A lowercase first segment is a package
    // here rather than a new binding, which is why this arm is tried before `binding_pattern`.
    path_pattern: ($) =>
      choice(
        $.type_identifier,
        seq($._path_segment, repeat1(seq("::", $._path_segment))),
      ),

    // A constructor's fields may only be names — a nested pattern is rejected by the
    // compiler rather than compiled, because code generation extracts fields with no test of
    // its own. It is a grammar the parser accepts and the checker refuses.
    //
    // `Insert(user:, reply: r)` names fields; `Thread(id:, ..)` leaves the rest unwritten.
